// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simulate onClick 1`] = `
<DocumentTitle
  name="nuwan"
  title="hello"
>
  <div>
    <h1>
      hello
    </h1>
    <button
      onClick={[Function]}
    >
      Click Me
    </button>
    <h4>
      0
    </h4>
  </div>
</DocumentTitle>
`;

exports[`render DoumentTitle 1`] = `
<div>
  <h1>
    hello
  </h1>
  <button
    onClick={[Function]}
  >
    Click Me
  </button>
  <h4>
    0
  </h4>
</div>
`;
